--- a/build.gradle
+++ b/build.gradle
@@ -28,9 +28,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
     // GraphQL
-     compile group: 'com.graphql-java-kickstart', name: 'graphiql-spring-boot-starter', version: '5.10.0'
+    compile group: 'com.graphql-java-kickstart', name: 'graphiql-spring-boot-starter', version: '5.10.0'
     compile group: 'com.graphql-java-kickstart', name: 'graphql-java-tools', version: '5.5.1'
-
     compile group: 'com.graphql-java', name: 'graphql-spring-boot-starter', version: '5.0.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.3.50"
 
@@ -38,10 +37,17 @@ dependencies {
     annotationProcessor("org.projectlombok:lombok:1.18.8")
     compileOnly("org.projectlombok:lombok:1.18.8")
 
+    compile("com.github.kevinsawicki:http-request:6.0")
+
+
+    // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    testCompile 'com.github.tomakehurst:wiremock:2.15.0'
+    testCompile 'com.jayway.jsonpath:json-path-assert:2.4.0'
+
 }
 
 // Define the main class for the application
